--- a/frontend/myCrossing/src/app/perfil/perfil.component.html
+++ b/frontend/myCrossing/src/app/perfil/perfil.component.html
@@ -11,7 +11,7 @@
     <app-visitasemanal></app-visitasemanal>
   </div>
 </div>
-<div id="test1">
+<div id="misvecinos">
   <h2>Mis vecinos</h2>
   <app-misvecinos></app-misvecinos>
 </div>
