--- a/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
+++ b/frontend/myCrossing/src/app/perfil/misvecinos/misvecinos.component.css
@@ -9,7 +9,6 @@ p, span, li{
 #vecino-grid{
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 48% 48%;
   grid-gap: 1vw;
 }
 
@@ -80,4 +79,17 @@ p, span, li{
   background-color: rgb(71, 71, 133);
 }
 
+.porcentaje{
+  width: 5vw;
+  margin: 1vw auto;
+  background-color: rgb(223, 119, 119);
+  border-radius: 25px;
+  border-color: turquoise;
+  border-width: 5px;
+  border-style: solid;
+  font-size: 1.2vw;
+  justify-content: center;
+  padding: 0.5vw;
+  text-align: center;
+}
 
