--- a/frontend/myCrossing/src/app/autenticacion/login/login.component.css
+++ b/frontend/myCrossing/src/app/autenticacion/login/login.component.css
@@ -1,23 +1,79 @@
 .titulo{
-    font-size: 2vw;
+    font-size: 5vw;
     text-align: center;
-    font-size: 20px;
+    margin-bottom: 3%;
 }
 .error{
     font-size: 1vw;
+    padding-left: 10%;
+    margin-bottom: 2%;
     color: red;
 
 }
-.formulario{
+.field{
+    padding-left: 10%;
+    width: 100%;
+    display: flex;
+    margin-bottom: 2%;
     margin-top: 10%;
-    margin-left: 20%;
-    margin-right: 20%;
-    border-width: 1px;
+}
+.fieldlabel{
+    width: 8vw;
+}
+.fieldinput{
+    text-align: right;
+    width: 5vw;
+    margin-left: 15%;
+}
+input{
+    font-size: 1.3vw;
+}
+.iniciar{
+    margin-bottom: 3%;
+    margin-top: 10%;
+    text-align: center;
+}
+.pantalla{
     border-style: solid;
+    border-radius: 10%;
+    border-color: black;
+    border-width: 1.5px;
+    padding: 3% 3% 2% 3%;
+    background-color: rgb(210, 255, 214);
 }
-#user{
-    margin-left: 26px;
+.menu{
+    width: 100%;
+    text-align: center;
 }
-#password{
-    margin-left: 5px;
+button{
+    font-size: 2vw;
+}
+.botonmovil{
+    padding: 7% 7% 7% 7%;
+    margin: 5% 0% 0% 42%;
+    border-style: solid;
+    border-radius: 100%;
+    border-color: black;
+    border-width: 1.5px;
+    background-color: #ceebaf;
+    width: 1%;
+    margin-top: 5%;
+
+}
+.formulario{
+    border-style: solid;
+    border-radius: 10%;
+    border-color: black;
+    border-width: 1.5px;
+    background-color: #fffec2;
+    padding-top: 10%;
+    padding-bottom: 30%;
+}
+.movil{
+    padding: 5% 30% 0% 30%;
+}
+.background{
+    height: 100%;
+    background-color: #c9f3f3;
+    font-size: 2vw;
 }
