--- a/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -1,118 +1,179 @@
-<form class="formulario" (ngSubmit)="register(registerForm)" [formGroup]="registerForm">
-    <div class="titulo">Registro</div>
-    <p>
-    <label for="nombre">Nombre: </label>
-    <input id="nombre" formControlName='nombre' type="text">
-    </p>
-    <container *ngIf="registerForm.controls.nombre.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.nombre.errors.required && submitted">
-                Debe introducir un nombre. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="password">Contraseña: </label>
-    <input id="password" formControlName='clave' type="password">
-    </p>
-    <container *ngIf="registerForm.controls.clave.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.clave.errors.required && submitted">
-                Debe introducir una contraseña. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="isla">Isla: </label>
-    <input id="isla" formControlName='isla' type="text">
-    </p>
-    <container *ngIf="registerForm.controls.isla.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.isla.errors.required && submitted">
-                Debe introducir un nombre de isla. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="fruta">Fruta: </label>
-    <input type="radio" id="pera" formControlName='fruta' value="PERA">
-    <label for="pera">Pera</label>
-    <input type="radio" id="manzana" formControlName='fruta' value="MANZANA">
-    <label for="manzana">Manzana</label>
-    <input type="radio" id="naranja" formControlName='fruta' value="NARANJA">
-    <label for="naranja">Naranja</label>
-    <input type="radio" id="cereza" formControlName='fruta' value="CEREZA">
-    <label for="cereza">Cereza</label>
-    <input type="radio" id="melocoton" formControlName='fruta' value="MELOCOTON">
-    <label for="melocoton">Melocoton</label>
-    </p>
-    <container *ngIf="registerForm.controls.fruta.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.fruta.errors.required && submitted">
-                Debe introducir una fruta. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="cumpleanyos">Cumpleanyos: </label>
-    <input id="cumpleanyos" formControlName='cumpleanyos' type="date">
-    </p>
-    <container *ngIf="registerForm.controls.cumpleanyos.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.cumpleanyos.errors.required && submitted">
-                Debe introducir una fecha de cumpleaños. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="email">Email: </label>
-    <input type="email" id="email" formControlName='email'>
-    </p>
-    <container *ngIf="registerForm.controls.email.errors && submitted">
-        <p class="error">
-            Debe introducir un email válido.
-        </p>
-    </container>
-    <p>
-    <label for="hemisferio">Hemisferio: </label>
-    <input type="radio" id="norte" formControlName='hemisferio' value="NORTE">
-    <label for="norte">Norte</label>
-    <input type="radio" id="sur" formControlName='hemisferio' value="SUR">
-    <label for="sur">Sur</label>
-    </p>
-    <container *ngIf="registerForm.controls.hemisferio.errors && submitted">
-        <p class="error">
-            <container *ngIf="registerForm.controls.hemisferio.errors.required && submitted">
-                Debe introducir su hemisferio. 
-            </container>
-        </p>
-    </container>
-    <p>
-    <label for="id_switch">Id switch: </label>
-    <input type="text" placeholder="SW-1234-1234-1234" maxlength="17" minlength="17" id="id_switch" formControlName='id_switch'>
-    </p>
-    <p>
-        <container *ngIf="registerForm.controls.id_switch.errors && submitted">
-            <p class="error">
-                El id de switch debe ser un número de 12 cifras con la siguiente estructura: SW-1234-1234-1234. 
-            </p>
-        </container>
-    </p>
-    <p>
-    <label for="id_suenyo">Id sueño: </label>
-    <input type="text" placeholder="DA-1234-1234-1234" maxlength="17" minlength="17"  id="id_suenyo" formControlName='id_suenyo'>
-    </p>
-    <p>
-        <container *ngIf="registerForm.controls.id_suenyo.errors && submitted">
-            <p class="error">
-                El id de sueño debe ser un número de 12 cifras con la siguiente estructura: DA-1234-1234-1234. 
-            </p>
-        </container>
-    </p>
-    <p>
-    <label for="apodo_aldeano">Apodo aldeano: </label>
-    <input type="text" id="apodo_aldeano" formControlName='apodo_aldeano'>
-    </p>
-    <button type="submit">Registrate</button>
-    <div>{{aviso}}</div>
-</form>
+<div class="background">
+    <div class="movil">
+            <div class="pantalla">
+            <form class="formulario" (ngSubmit)="register(registerForm)" [formGroup]="registerForm">
+                <div class="titulo">Registrate</div>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="nombre">Nombre: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input id="nombre" formControlName='nombre' type="text">
+                    </div>
+                </div>
+                <container *ngIf="registerForm.controls.nombre.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.nombre.errors.required && submitted">
+                            Debe introducir un nombre. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="password">Contraseña: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input id="password" formControlName='clave' type="password">
+                    </div>
+                </div>
+                <container *ngIf="registerForm.controls.clave.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.clave.errors.required && submitted">
+                            Debe introducir una contraseña. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="isla">Isla: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input id="isla" formControlName='isla' type="text">
+                    </div>
+                </div>
+                <container *ngIf="registerForm.controls.isla.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.isla.errors.required && submitted">
+                            Debe introducir un nombre de isla. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fruta">
+                        <label for="fruta">Fruta: </label>
+                    </div>
+                    <div class="radioinputs">
+                        <input type="radio" id="pera" formControlName='fruta' value="PERA">
+                    </div>
+                        <img alt="Pera" width="8%" height="8%" src="../../../assets/images/pera.png">
+                    <div class="radioinputs">
+                        <input type="radio" id="manzana" formControlName='fruta' value="MANZANA">
+                    </div>
+                        <img alt="Manzana" width="8%" height="8%" src="../../../assets/images/manzana.png">
+                    <div class="radioinputs">
+                        <input type="radio" id="naranja" formControlName='fruta' value="NARANJA">
+                    </div>
+                        <img alt="Naranja" width="8%" height="8%" src="../../../assets/images/naranja.png">
+                    <div class="radioinputs">
+                        <input type="radio" id="cereza" formControlName='fruta' value="CEREZA">
+                    </div>
+                        <img alt="Cereza" width="8%" height="8%" src="../../../assets/images/cereza.png">
+                    <div class="radioinputs">
+                        <input type="radio" id="melocoton" formControlName='fruta' value="MELOCOTON">
+                    </div>
+                        <img alt="Melocoton" width="8%" height="8%" src="../../../assets/images/melocoton.png">
+                </div>
+                <container *ngIf="registerForm.controls.fruta.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.fruta.errors.required && submitted">
+                            Debe introducir una fruta. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="cumpleanyos">Cumpleanyos: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input id="cumpleanyos" formControlName='cumpleanyos' type="date">
+                    </div>
+                </div>
+                <container *ngIf="registerForm.controls.cumpleanyos.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.cumpleanyos.errors.required && submitted">
+                            Debe introducir una fecha de cumpleaños. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="email">Email: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input type="email" id="email" formControlName='email'>
+                    </div>
+                </div>
+                <container *ngIf="registerForm.controls.email.errors && submitted">
+                    <div class="error">
+                        Debe introducir un email válido.
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="hemisferio">Hemisferio: </label>
+                    </div>
+                    <div class="radioinputs">
+                    <input type="radio" id="norte" formControlName='hemisferio' value="NORTE">
+                    </div>
+                    <img alt="Norte" width="6%" height="6%" src="../../../assets/images/up.jpg">
+                    <div class="radioinputs">
+                    <input type="radio" id="sur" formControlName='hemisferio' value="SUR">
+                    </div>
+                    <img alt="Sur" width="6%" height="6%" src="../../../assets/images/down.png">
+                </div>
+                <container *ngIf="registerForm.controls.hemisferio.errors && submitted">
+                    <div class="error">
+                        <container *ngIf="registerForm.controls.hemisferio.errors.required && submitted">
+                            Debe introducir su hemisferio. 
+                        </container>
+                    </div>
+                </container>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="id_switch">Id switch: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input type="text" placeholder="SW-1234-1234-1234" maxlength="17" minlength="17" id="id_switch" formControlName='id_switch'>
+                    </div>
+                </div>
+                <div>
+                    <container *ngIf="registerForm.controls.id_switch.errors && submitted">
+                        <div class="error">
+                            El id de switch debe ser un número de 12 cifras con la siguiente estructura: SW-1234-1234-1234. 
+                        </div>
+                    </container>
+                </div>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="id_suenyo">Id sueño: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input type="text" placeholder="DA-1234-1234-1234" maxlength="17" minlength="17"  id="id_suenyo" formControlName='id_suenyo'>
+                    </div>
+                </div>
+                <div>
+                    <container *ngIf="registerForm.controls.id_suenyo.errors && submitted">
+                        <div class="error">
+                            El id de sueño debe ser un número de 12 cifras con la siguiente estructura: DA-1234-1234-1234. 
+                        </div>
+                    </container>
+                </div>
+                <div class="field">
+                    <div class="fieldlabel">
+                        <label for="apodo_aldeano">Apodo aldeano: </label>
+                    </div>
+                    <div class="fieldinput">
+                        <input type="text" id="apodo_aldeano" formControlName='apodo_aldeano'>
+                    </div>
+                </div>
+                <div class="registrar">
+                    <button type="submit">Registrate</button>
+                </div>
+                <div>{{aviso}}</div>
+            </form>
+            <div class="menu">
+                <div class="botonmovil"></div>
+            </div>
+        </div>
+    </div>
+</div>
