Validadores de usuario acabados para authorization

--- a/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -169,7 +169,7 @@
                 <div class="registrar">
                     <button type="submit">Registrate</button>
                 </div>
-                <div>{{aviso}}</div>
+                <div class="aviso">{{aviso}}</div>
             </form>
             <div class="menu">
                 <div class="botonmovil"></div>
