view: Vista perfil & Imagenes
- Mejorada la vista del user

-Añadidos iconos

--- a/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
+++ b/frontend/myCrossing/src/app/autenticacion/registro/registro.component.html
@@ -14,7 +14,7 @@
                 <container *ngIf="registerForm.controls.nombre.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.nombre.errors.required && submitted">
-                            Debe introducir un nombre. 
+                            Debe introducir un nombre.
                         </container>
                     </div>
                 </container>
@@ -29,7 +29,7 @@
                 <container *ngIf="registerForm.controls.clave.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.clave.errors.required && submitted">
-                            Debe introducir una contraseña. 
+                            Debe introducir una contraseña.
                         </container>
                     </div>
                 </container>
@@ -44,7 +44,7 @@
                 <container *ngIf="registerForm.controls.isla.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.isla.errors.required && submitted">
-                            Debe introducir un nombre de isla. 
+                            Debe introducir un nombre de isla.
                         </container>
                     </div>
                 </container>
@@ -76,7 +76,7 @@
                 <container *ngIf="registerForm.controls.fruta.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.fruta.errors.required && submitted">
-                            Debe introducir una fruta. 
+                            Debe introducir una fruta.
                         </container>
                     </div>
                 </container>
@@ -91,7 +91,7 @@
                 <container *ngIf="registerForm.controls.cumpleanyos.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.cumpleanyos.errors.required && submitted">
-                            Debe introducir una fecha de cumpleaños. 
+                            Debe introducir una fecha de cumpleaños.
                         </container>
                     </div>
                 </container>
@@ -115,16 +115,16 @@
                     <div class="radioinputs">
                     <input type="radio" id="norte" formControlName='hemisferio' value="NORTE">
                     </div>
-                    <img alt="Norte" width="6%" height="6%" src="../../../assets/images/up.jpg">
+                    <img alt="Norte" width="6%" height="6%" src="../../../assets/images/hemisferio-norte.png">
                     <div class="radioinputs">
                     <input type="radio" id="sur" formControlName='hemisferio' value="SUR">
                     </div>
-                    <img alt="Sur" width="6%" height="6%" src="../../../assets/images/down.png">
+                    <img alt="Sur" width="6%" height="6%" src="../../../assets/images/hemisferio-sur.png">
                 </div>
                 <container *ngIf="registerForm.controls.hemisferio.errors && submitted">
                     <div class="error">
                         <container *ngIf="registerForm.controls.hemisferio.errors.required && submitted">
-                            Debe introducir su hemisferio. 
+                            Debe introducir su hemisferio.
                         </container>
                     </div>
                 </container>
@@ -139,7 +139,7 @@
                 <div>
                     <container *ngIf="registerForm.controls.id_switch.errors && submitted">
                         <div class="error">
-                            El id de switch debe ser un número de 12 cifras con la siguiente estructura: SW-1234-1234-1234. 
+                            El id de switch debe ser un número de 12 cifras con la siguiente estructura: SW-1234-1234-1234.
                         </div>
                     </container>
                 </div>
@@ -154,7 +154,7 @@
                 <div>
                     <container *ngIf="registerForm.controls.id_suenyo.errors && submitted">
                         <div class="error">
-                            El id de sueño debe ser un número de 12 cifras con la siguiente estructura: DA-1234-1234-1234. 
+                            El id de sueño debe ser un número de 12 cifras con la siguiente estructura: DA-1234-1234-1234.
                         </div>
                     </container>
                 </div>
