mejora: Vista usuario
- Mejorada la vista del usuario

--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -6,7 +6,7 @@ Azul: #ade6e7
 Lighter azul:  #c9f3f3
 Verde: rgb(210, 255, 214)
 Lighter verde: rgb(228, 255, 230)
-Blanco: #f7f3e8
+Blanco: rgba(247, 243, 232, 1)
 
 PROBAR INICIO: todos los divs #fffbe1
 */
