--- a/frontend/myCrossing/src/styles.css
+++ b/frontend/myCrossing/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 body{
   margin: 0;
 }
@@ -6,6 +5,7 @@ body{
 * {
   font-family: Varela Round, serif;
   outline: none;
+  color: #2c271b;
 }
 
 .boton-circular{
