--- a/frontend/myCrossing/src/app/inicio/inicio.component.css
+++ b/frontend/myCrossing/src/app/inicio/inicio.component.css
@@ -49,6 +49,10 @@ PROBAR INICIO: todos los divs #fffbe1
   text-shadow: 0px 1px 6px black;
 }
 
+#portada-item2 > h1, h3{
+  color: rgba(247, 243, 232);
+}
+
 #portada-item3{
   grid-column-start: 1;
   grid-column-end: 3;
