fix: User service
- Terminado el user service

- Read user solo devuelve los campos a mostrar

- Añadida constriccion UNIQUE  a los ID switch y sueño

--- a/frontend/myCrossing/src/app/perfil/perfil.component.css
+++ b/frontend/myCrossing/src/app/perfil/perfil.component.css
@@ -95,6 +95,8 @@ span {
   border-color: rgba(247, 243, 232);
   background-color: rgba(247, 243, 232);
   border-style: solid;
+  border-radius: 10px;
+  border-width: 1.2px;
 }
 
 .icono {
